showing photo_missing.png when image links are broken in reports

--- a/arches_hip/templates/views/reports/sections/related_resource_section.htm
+++ b/arches_hip/templates/views/reports/sections/related_resource_section.htm
@@ -304,7 +304,7 @@
                                             {% for related_resource in related_resource_dict.INFORMATION_RESOURCE_IMAGE %}
                                                 <dd class="arches-report-subsection-item">
                                                     <a href="{% url 'report' related_resource.entityid %}" title="{% trans "View Report" %}">
-                                                        <img src="{{related_resource.file_path}}" alt="" class="arches-report-image-thumbnail" style="width: 25%;">
+                                                        <img src="{{related_resource.file_path}}" alt="" class="arches-report-image-thumbnail" style="width: 25%;" onerror="this.src='{{STATIC_URL}}img/photo_missing.png';">
                                                     </a>
                                                 </dd>
 
