--- a/arches_hip/templates/views/reports/HERITAGE_RESOURCE.E18.htm
+++ b/arches_hip/templates/views/reports/HERITAGE_RESOURCE.E18.htm
@@ -319,97 +319,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                                     <div class="arches-report-subsection-content">
 
                                         <!-- Classification -->
-                                        <div class="row">
-                                            <div class="col-xs-12">
-                                                <dl>
-                                                    <dt>
-                                                        <h5 id="" class="arches-report-subsection-title">{% trans "Classification" %}</h5>
-                                                    </dt>
-
-                                                    {% if 'PRODUCTION_E12' not in report_info.source.graph %}
-                                                        <dd class="arches-report-subsection-item">
-                                                            {% trans "No classifications recorded" %}
-                                                        </dd>
-                                                    {% else %}
-
-                                                        {% for PRODUCTION_E12 in report_info.source.graph.PRODUCTION_E12 %}
-                                                            {% if 'PHASE_TYPE_ASSIGNMENT_E17' not in PRODUCTION_E12 %}
-                                                                <dd class="arches-report-subsection-item">
-                                                                    {% trans "No classifications recorded" %}
-                                                                </dd>
-                                                            {% else %}
-
-                                                                {% for PHASE_TYPE_ASSIGNMENT_E17 in PRODUCTION_E12.PHASE_TYPE_ASSIGNMENT_E17 %}
-                                                                    <dd class="arches-report-subsection-item arches-report-spacer">
-
-                                                                        {% if 'HERITAGE_RESOURCE_TYPE_E55' in PHASE_TYPE_ASSIGNMENT_E17 %}
-                                                                            <span class="arches-report-subsection-item-type">
-                                                                                {% trans "Type" %}:
-                                                                            </span>
-                                                                            {% for HERITAGE_RESOURCE_TYPE_E55 in PHASE_TYPE_ASSIGNMENT_E17.HERITAGE_RESOURCE_TYPE_E55 %}
-                                                                                {{HERITAGE_RESOURCE_TYPE_E55.HERITAGE_RESOURCE_TYPE_E55__value}}
-                                                                            {% endfor %} 
-                                                                        {% endif %}
-
-                                                                        {% if 'HERITAGE_RESOURCE_USE_TYPE_E55' in PHASE_TYPE_ASSIGNMENT_E17 %}
-                                                                            <span class="arches-report-subsection-item-type">
-                                                                                {% trans "Use" %}:
-                                                                            </span>
-                                                                            {% for HERITAGE_RESOURCE_USE_TYPE_E55 in PHASE_TYPE_ASSIGNMENT_E17.HERITAGE_RESOURCE_USE_TYPE_E55 %}
-                                                                                {{HERITAGE_RESOURCE_USE_TYPE_E55.HERITAGE_RESOURCE_USE_TYPE_E55__value}}
-                                                                            {% endfor %}
-                                                                        {% endif %}
-
-                                                                        {% if 'CULTURAL_PERIOD_E55' in PHASE_TYPE_ASSIGNMENT_E17 %}
-                                                                             <span class="arches-report-subsection-item-type">
-                                                                                {% trans "Period" %}:
-                                                                            </span>
-                                                                            {% for CULTURAL_PERIOD_E55 in PHASE_TYPE_ASSIGNMENT_E17.CULTURAL_PERIOD_E55 %}
-                                                                                {{CULTURAL_PERIOD_E55.CULTURAL_PERIOD_E55__value}}
-                                                                            {% endfor %}  
-                                                                        {% endif %}
-
-                                                                        {% if 'STYLE_E55' in PHASE_TYPE_ASSIGNMENT_E17 %}
-                                                                             <span class="arches-report-subsection-item-type">
-                                                                                {% trans "Style" %}:
-                                                                            </span>
-                                                                            {% for STYLE_E55 in PHASE_TYPE_ASSIGNMENT_E17.STYLE_E55 %}
-                                                                                {{STYLE_E55.STYLE_E55__value}}
-                                                                            {% endfor %}  
-                                                                        {% endif %}
-
-                                                                        {% if 'TIME___SPAN_PHASE_E52' in PHASE_TYPE_ASSIGNMENT_E17 %}
-                                                                            <span class="arches-report-subsection-item-type">
-                                                                                {% trans "Dates (from/to)" %}:
-                                                                            </span>
-                                                                            {% for TIME___SPAN_PHASE_E52 in PHASE_TYPE_ASSIGNMENT_E17.TIME___SPAN_PHASE_E52 %}
-                                                                                {% for FROM_DATE_E49 in TIME___SPAN_PHASE_E52.FROM_DATE_E49 %}
-                                                                                    {{FROM_DATE_E49.FROM_DATE_E49__value}}
-                                                                                {% endfor %} -
-                                                                                {% for TO_DATE_E49 in TIME___SPAN_PHASE_E52.TO_DATE_E49 %}
-                                                                                    {{TO_DATE_E49.TO_DATE_E49__value}}
-                                                                                {% endfor %} 
-                                                                            {% endfor %} 
-                                                                        {% endif %}
-
-                                                                    </dd>
-                                                                {% endfor %}
-
-                                                            {% endif %}   
-
-                                                        {% endfor %} 
-
-                                                    {% endif %}   
-
-                                                </dl>
-                                            </div>
-                                        </div>
+                                        {% include "views/reports/sections/heritage_resource_phase_type_assignment.htm" %}
 
                                         <!-- Components -->
                                         {% include "views/reports/sections/COMPONENT.E18.htm" %}
-
-                                        <!-- Related Features -->
-                                        {% include 'views/reports/sections/ANCILLARY_FEATURE_TYPE.E55.htm' %}
 
                                         <!-- Modifications -->
                                         <div class="row">
@@ -553,11 +466,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         {% include 'views/reports/sections/condition_assessment_section.htm' %}
     {% endif %}
 
-
     {% if 'EVALUATION_CRITERIA_ASSIGNMENT_E13' in report_info.source.graph %}
         {% include 'views/reports/sections/evaluation_section.htm' %}
     {% endif %}
 
+    {% if 'RIGHT_E30' in report_info.source.graph %}
+        {% include 'views/reports/sections/designation_section.htm' %}
+    {% endif %}
 
     {% include "views/reports/sections/related_resource_section.htm" %}
 
