--- a/arches_hip/templates/views/reports/sections/evaluation_section.htm
+++ b/arches_hip/templates/views/reports/sections/evaluation_section.htm
@@ -12,7 +12,7 @@
             <div class="">
                 <i class="center-icon rounded-x fa fa-folder-open"></i>
                 <div class="">
-                    <h2 class="arches-report-section-header">{% trans "Resource Evaluation" %}</h2>
+                    <h2 class="arches-report-section-header">{% trans "Resource Significance" %}</h2>
                 </div> 
             </div>
 
@@ -37,7 +37,7 @@
                                 <!-- Section sub-header -->
                                 <div class="col-sm-4">
                                     {% if forloop.first %}
-                                        <h3 class="arches-report-subsection">{% trans "Resource Significance" %}</h3>
+                                        <h3 class="arches-report-subsection">{% trans "Evaluation Details" %}</h3>
                                     {% endif %}
                                 </div>
                                 <!-- End Section sub-header -->
@@ -55,7 +55,7 @@
                                             <div class="col-xs-12">
                                                 <dl>
                                                     <dt>
-                                                        <h5 id="" class="arches-report-subsection-title">Evaluation Criteria</h5>
+                                                        <h5 id="" class="arches-report-subsection-title">{% trans "Context/Theme" %}</h5>
                                                     </dt>
 
                                                     {% if 'EVALUATION_CRITERIA_TYPE_E55' not in EVALUATION_CRITERIA_ASSIGNMENT_E13 %}
@@ -123,7 +123,7 @@
                                             <div class="col-xs-12">
                                                 <dl>
                                                     <dt>
-                                                        <h5 id="" class="arches-report-subsection-title">{% trans "Reason Statement" %}</h5>
+                                                        <h5 id="" class="arches-report-subsection-title">{% trans "Significance Statement" %}</h5>
                                                     </dt>
 
                                                     {% if 'REASONS_E62' not in EVALUATION_CRITERIA_ASSIGNMENT_E13 %}
@@ -152,59 +152,6 @@
 
                         {% endfor %}
                         
-
-                        <hr class="devider margin-top-10" style="margin-bottom: 5px;"></hr>
-
-                        <!-- Descriptions -->
-                        <div class="row">
-
-                            <!-- Section sub-header -->
-                            <div class="col-sm-4">
-                                <h3 class="arches-report-subsection">{% trans "Designations" %}</h3>
-                            </div>
-                            <!-- End Section sub-header -->
-
-                             <!-- Section Content -->
-                            <div class="col-sm-8">
-
-                                <!-- Spacer -->
-                                <div class="arches-report-spacer hidden-xs"></div>
-
-                                <div class="arches-report-subsection-content">
-                                    <!-- Designations -->
-                                    <div class="row">
-                                        <div class="col-xs-12">
-                                            <dl>
-                                                <dt>
-                                                    <h5 id="" class="arches-report-subsection-title hidden">{% trans "Designations" %}</h5>
-                                                </dt>
-
-                                                {% if 'RIGHT_E30' not in report_info.source.graph %}
-                                                    <dd class="arches-report-subsection-item">
-                                                        {% trans "No designations recorded" %}
-                                                    </dd>
-                                                {% else %}
-                                                    {% for RIGHT_E30 in report_info.source.graph.RIGHT_E30 %}
-                                                        {% for PROTECTION_EVENT_E65 in RIGHT_E30.PROTECTION_EVENT_E65 %}
-                                                            {% for TYPE_OF_DESIGNATION_OR_PROTECTION_E55 in PROTECTION_EVENT_E65.TYPE_OF_DESIGNATION_OR_PROTECTION_E55 %}
-                                                                <dd class="arches-report-subsection-item">
-                                                                    {{TYPE_OF_DESIGNATION_OR_PROTECTION_E55.TYPE_OF_DESIGNATION_OR_PROTECTION_E55__value}}
-                                                                 </dd>
-                                                            {% endfor %}  
-                                                        {% endfor %}
-                                                    {% endfor %}
-                                                {% endif %}
-
-                                            </dl>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <!-- End Section Content-->
-
-                        </div>
-                        <!-- End Descriptions Section -->
                     </div>
                 </div>
                 <!-- End Project Information -->
