Remove spacer from components template

--- a/arches_hip/templates/views/reports/sections/COMPONENT.E18.htm
+++ b/arches_hip/templates/views/reports/sections/COMPONENT.E18.htm
@@ -20,7 +20,7 @@
                     {% else %}
 
                         {% for COMPONENT_E18 in PRODUCTION_E12.COMPONENT_E18 %}
-                            <dd class="arches-report-subsection-item arches-report-spacer">
+                            <dd class="arches-report-subsection-item">
 
                                 <span class="arches-report-subsection-item-type">
                                     {% trans "Component" %}:
