--- a/arches_hip/templates/views/reports/sections/heritage_resource_phase_type_assignment.htm
+++ b/arches_hip/templates/views/reports/sections/heritage_resource_phase_type_assignment.htm
@@ -31,7 +31,7 @@
                                     {% endfor %} 
                                 {% else %}
                                     {% trans "none defined" %}
-                                {% endif %}
+                                {% endif %}&nbsp;
 
                                 <span class="arches-report-subsection-item-type">
                                     {% trans "Use" %}:
@@ -42,7 +42,7 @@
                                     {% endfor %}
                                 {% else %}
                                     {% trans "none defined" %}
-                                {% endif %}
+                                {% endif %}&nbsp;
 
                                 <span class="arches-report-subsection-item-type">
                                     {% trans "Period" %}:
@@ -53,7 +53,7 @@
                                     {% endfor %}  
                                 {% else %}
                                     {% trans "none defined" %}
-                                {% endif %}
+                                {% endif %}&nbsp;
 
                                 <span class="arches-report-subsection-item-type">
                                     {% trans "Style" %}:
@@ -64,7 +64,7 @@
                                     {% endfor %}  
                                 {% else %}
                                     {% trans "none defined" %}
-                                {% endif %}
+                                {% endif %}&nbsp;
 
                                 <span class="arches-report-subsection-item-type">
                                     {% trans "Dates (from/to)" %}:
@@ -80,7 +80,7 @@
                                     {% endfor %} 
                                 {% else %}
                                     {% trans "none defined" %}
-                                {% endif %}
+                                {% endif %}&nbsp;
 
                                 <span class="arches-report-subsection-item-type">
                                     {% trans "Related Features" %}:
