--- a/arches_hip/templates/views/reports/sections/related_resource_section.htm
+++ b/arches_hip/templates/views/reports/sections/related_resource_section.htm
@@ -295,7 +295,7 @@
 
                                         <dl>
                                             <dt>
-                                                <h5 class="arches-report-subsection-title">
+                                                <h5 class="arches-report-subsection-title arches-report-spacer">
                                                     {% trans "Images" %}
                                                 </h5>
                                             </dt>
@@ -304,7 +304,7 @@
                                             {% for related_resource in related_resource_dict.INFORMATION_RESOURCE_IMAGE %}
                                                 <dd class="arches-report-subsection-item">
                                                     <a href="{% url 'report' related_resource.entityid %}" title="{% trans "View Report" %}">
-                                                        <img src="{{related_resource.thumbnail}}" alt="" class="arches-report-image-thumbnail" style="width: 25%;" onerror="this.src='{{STATIC_URL}}img/photo_missing.png';">
+                                                        <img src="{{related_resource.thumbnail}}" alt="" class="arches-report-image-thumbnail" style="width: 25%; margin-bottom: 20px; border: solid 1px #999;" onerror="this.src='{{STATIC_URL}}img/photo_missing.png';">
                                                     </a>
                                                 </dd>
 
