fixing error in designation section of report

--- a/arches_hip/templates/views/reports/sections/designation_section.htm
+++ b/arches_hip/templates/views/reports/sections/designation_section.htm
@@ -53,7 +53,7 @@
                                                     <h5 id="" class="arches-report-subsection-title"></h5>
                                                 </dt>
 
-                                                {% for RIGHT_E30 in report_info.source.graph %}
+                                                {% for RIGHT_E30 in report_info.source.graph.RIGHT_E30 %}
                                                     {% for PROTECTION_EVENT_E65 in RIGHT_E30.PROTECTION_EVENT_E65 %}
                                                         <span class="arches-report-subsection-item-type">
                                                             {% trans "Type" %}:
