fix image display for INFORMATION RESOURCES report

--- a/arches_hip/templates/views/reports/INFORMATION_RESOURCE.E73.htm
+++ b/arches_hip/templates/views/reports/INFORMATION_RESOURCE.E73.htm
@@ -328,7 +328,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                                                     <!-- Links for Image Gallery Supply Image in the href, thumbnails in the img tags -->
                                                     {% for FILE_PATH_E62 in report_info.source.graph.FILE_PATH_E62 %}
 
-                                                        {% if report_info.display_as_image %}
+                                                        {% if report_info.source.display_as_image %}
 
                                                             <dd class="arches-report-subsection-item">
                                                                 <div id="" style="margin-top: 5px;">
