--- a/arches_hip/templates/views/reports/ACTIVITY.E7.htm
+++ b/arches_hip/templates/views/reports/ACTIVITY.E7.htm
@@ -32,7 +32,19 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
             <!-- Project Name (screens extra small)-->
              <div class="hidden-sm hidden-md hidden-lg">
-                <h1 class="arches-breadcrumb-title margin-left-15 margin-bottom-0" style="margin-top: -5px;"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
+                <h1 class="arches-breadcrumb-title margin-left-15 margin-bottom-0" style="margin-top: -5px; margin-bottom: 0;"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
+                <ul class="list-inline up-ul margin-left-15">
+                    <li>
+                        <i class="arches-search-link fa fa-edit"></i>
+                        <a href="#report" class="info-link related-resources-graph"><span class="arches-search-link">{% trans 'Resource Report' %}</span></a>
+                    </li>
+
+                    <li data-bind="visible: geometries().length > 0">
+                        <i class="arches-search-link fa fa-map-marker"></i>
+                        <a href="#map" class="info-link navigate-map"><span class="arches-search-link">{% trans 'Map' %}</span></a>
+                    </li>
+
+                </ul>
                 <hr class="margin-top-minus-10 margin-bottom-10" style="border-width: 0px;">
             </div>
 
@@ -146,7 +158,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 
     <!--=== Resource Description Section ===-->
-    <div class="block-description" style="padding-top: 30px;">
+    <div class="block-description" style="padding-top: 30px;" id="report">
         <div class="container">
 
             <!-- Resource Report Container -->
