remove spacer from designation section of reports

--- a/arches_hip/templates/views/reports/sections/designation_section.htm
+++ b/arches_hip/templates/views/reports/sections/designation_section.htm
@@ -55,7 +55,7 @@
 
                                                 {% for RIGHT_E30 in report_info.source.graph.RIGHT_E30 %}
                                                     {% for PROTECTION_EVENT_E65 in RIGHT_E30.PROTECTION_EVENT_E65 %}
-                                                        <dd class="arches-report-subsection-item arches-report-spacer">
+                                                        <dd class="arches-report-subsection-item">
                                                             <span class="arches-report-subsection-item-type">
                                                                 {% trans "Type" %}:
                                                             </span>
