hiding report options button

--- a/arches_hip/templates/views/reports/ACTIVITY.E7.htm
+++ b/arches_hip/templates/views/reports/ACTIVITY.E7.htm
@@ -48,13 +48,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 <hr class="margin-top-minus-10 margin-bottom-10" style="border-width: 0px;">
             </div>
 
-            <div class="col-sm-4 col-md-3 col-md-offset-1">
+            <!-- <div class="col-sm-4 col-md-3 col-md-offset-1">
 
                 <div class="btn-group margin-top-5">
-                    
-                    <!-- Invoke style switcher from this button by adding the tyle-switcher-btn class
-                    <button type="button" class="style-switcher-btn btn btn-primary" data-toggle="">
-                    -->
 
                     <button type="button" id="report_options" class="btn btn-primary hidden-xs" style="margin-top: 5px;" data-toggle="">
                         {% trans "Report Options" %} &nbsp;
@@ -71,7 +67,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     </div>
                 </div>
 
-            </div>
+            </div> -->
         </div>
 
     </div>
