updating the lingo to the latest

--- a/arches_hip/templates/views/reports/sections/related_resource_section.htm
+++ b/arches_hip/templates/views/reports/sections/related_resource_section.htm
@@ -82,7 +82,7 @@
                             <!-- Section Header -->
                             <div class="col-sm-4">
                                 <h3 class="arches-report-subsection">
-                                    {% trans "Related Heritage Districts" %}
+                                    {% trans "Related Historic Districts" %}
                                 </h3>
                             </div>
                             <!-- End Section Header -->
