--- a/arches_hip/templates/views/reports/sections/designation_section.htm
+++ b/arches_hip/templates/views/reports/sections/designation_section.htm
@@ -10,7 +10,7 @@
 
             <!-- Section Header -->
             <div class="">
-                <i class="center-icon rounded-x fa fa-folder-open"></i>
+                <i class="center-icon rounded-x fa fa-list"></i>
                 <div class="">
                     <h2 class="arches-report-section-header">{% trans "Designations" %}</h2>
                 </div> 
