--- a/arches_hip/templates/views/reports/HISTORICAL_EVENT.E5.htm
+++ b/arches_hip/templates/views/reports/HISTORICAL_EVENT.E5.htm
@@ -26,12 +26,12 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         <div class="row">
 
             <!-- Project Name (screens small and bigger)-->
-            <div class="hidden-xs col-sm-8">
+            <div class="hidden-sm hidden-xs col-sm-8">
                 <h1 class="pull-left arches-breadcrumb-title"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
             </div>
 
             <!-- Project Name (screens extra small)-->
-             <div class="hidden-sm hidden-md hidden-lg">
+             <div class="hidden-md hidden-lg">
                 <h1 class="arches-breadcrumb-title margin-left-15 margin-bottom-0" style="margin-top: -5px; margin-bottom: 0;"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
                 <ul class="list-inline up-ul margin-left-15">
                     <li>
