update the forms to use the simplified select2/knockout integration

--- a/arches_hip/templates/views/forms/description.htm
+++ b/arches_hip/templates/views/forms/description.htm
@@ -27,7 +27,7 @@
 
                                <!--          <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form description-type" id="resource-description-type" data-bind="value: editing.DESCRIPTION_E62.DESCRIPTION_TYPE_E55__value, select2: { data: domains.DESCRIPTION_TYPE_E55, placeholder: 'Type', viewModel: editing.DESCRIPTION_TYPE_E55, conceptKey: 'DESCRIPTION_TYPE_E55'}"></div>
  -->
-                                        <div style="width:80%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="value: getEdited('DESCRIPTION_TYPE.E55', 'value'), select2: {placeholder: 'Type', dataKey: 'DESCRIPTION_TYPE.E55'}"></div>
+                                        <div style="width:80%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: {value: getEdited('DESCRIPTION_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'DESCRIPTION_TYPE.E55'}"></div>
 
                                         <!-- Spacer (for xs screens) -->
                                         <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>                                    
