--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -19,18 +19,13 @@
 
                         <div class="row">
 
-                            <div class="col-xs-12 padding-left-0">
+                            <div class="col-xs-12">
 
-                                <!-- Form for screens > xs -->
-                                <!-- <form class="form-inline " role="form"> -->
-                                    <div class="form-group arches-form hidden-xs" style="width: 100%">
-                                        
-                                        <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
-                                        " data-bind="value: getEdited('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), select2: {placeholder: 'Type', dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></div>
+                                <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
+                                " data-bind="select2: {value: getEdited('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></div>
 
-                                    </div>
-                                <!-- </form> -->
-                                <!-- Form for screens > xs -->
+                                {% include 'views/components/add-item-button.htm' %}
+
                             </div>
 
                         </div>
@@ -41,6 +36,34 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-xs-12">
+
+            <!-- Address -->
+            <div class="arches-crud-child-section">
+                <dl>
+                    <dd class="arches-CRUD-child-title">
+                        {% trans "This resource has these type:" %}
+                    </dd>
+
+                    <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
+                        <div data-bind="visible: branch_lists().length == 0" class="txt-color-blue">{% trans "No Types Defined" %}</div>   
+
+                        <div data-bind='foreach: branch_lists'>
+                            <div class="arches-crud-record">
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this name"><span data-bind='text: nodes.get("RESOURCE_TYPE_CLASSIFICATION.E55", "label")' style="padding-right:2px;"></span>
+                                </a>
+                            </div>
+                        </div>
+                    </dd>
+
+                </dl>
+            </div>
+        </div>
+    </div>
+    <!-- End Resource Type -->
 </div>
 <!-- End Rsource Type CRUD -->
 
@@ -70,7 +93,7 @@
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                                 
-                                <div style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="value: getEdited('NAME_TYPE.E55', 'value'), select2: {placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></div>
+                                <div style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEdited('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></div>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
@@ -146,7 +169,7 @@
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
                                 <div class="col-sm-6" style="padding-right: 5px;padding-left: 0px;">
-                                    <div style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" data-bind="value: getEdited('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), select2: {dataKey: 'important_dates'}">
+                                    <div style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" data-bind="select2: {value: getEdited('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
                                     </div>
                                 </div>
 
@@ -223,7 +246,7 @@
                     <dd>
                         <div class="row">
                             <div class="col-xs-12">
-                                <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="value: getEdited('KEYWORD.E55', 'value'), select2: {placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></div>
+                                <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: {value: getEdited('KEYWORD.E55', 'value'), placeholder: 'Subject', dataKey: 'KEYWORD.E55'}"></div>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
